crates/klio-resolver/tests/snapshots/corpus__diag_import_star_unknown.snap
---
source: crates/klio-resolver/tests/corpus.rs
assertion_line: 81
expression: "import kotlin.foo.*\n\nfun main() {}\n"
---
# symbols
  [0] Builtin println @builtin
  [1] Builtin print @builtin
  [2] TopLevelFunction main @25..29

# uses

# diagnostics
  [R0012] Error no package `kotlin.foo` is known to this build @0..19
