crates/klio-resolver/tests/snapshots/corpus__diag_unknown_kotlin_package.snap
---
source: crates/klio-resolver/tests/corpus.rs
expression: "import kotlin.bogus.Thing\n\nfun main() {\n    println(\"hi\")\n}\n"
---
# symbols
  [0] Builtin println @builtin
  [1] Builtin print @builtin
  [2] Builtin run @builtin
  [3] Builtin with @builtin
  [4] Builtin check @builtin
  [5] Builtin require @builtin
  [6] Builtin repeat @builtin
  [7] Builtin contract @builtin
  [8] Builtin synchronized @builtin
  [9] Builtin thread @builtin
  [10] Builtin buildList @builtin
  [11] Builtin buildMap @builtin
  [12] Builtin buildSet @builtin
  [13] Builtin sequence @builtin
  [14] Builtin iterator @builtin
  [15] TopLevelFunction main @31..35

# uses
  @44..51 -> [0] println (Builtin)

# diagnostics
  [R0012] Error no package `kotlin.bogus` is known to this build @0..25
