crates/klio-resolver/tests/snapshots/corpus__diag_unresolved.snap
---
source: crates/klio-resolver/tests/corpus.rs
expression: "fun main() {\n    println(banana)\n}\n"
---
# symbols
  [0] Builtin println @builtin
  [1] Builtin print @builtin
  [2] Builtin run @builtin
  [3] Builtin with @builtin
  [4] Builtin check @builtin
  [5] Builtin require @builtin
  [6] Builtin repeat @builtin
  [7] Builtin buildList @builtin
  [8] Builtin buildMap @builtin
  [9] Builtin buildSet @builtin
  [10] Builtin sequence @builtin
  [11] Builtin iterator @builtin
  [12] TopLevelFunction main @4..8

# uses
  @17..24 -> [0] println (Builtin)

# diagnostics
  [UNRESOLVED_REFERENCE] Error Unresolved reference `banana` @25..31
