crates/klio-resolver/tests/snapshots/corpus__forward_refs.snap
---
source: crates/klio-resolver/tests/corpus.rs
assertion_line: 73
expression: "fun main() {\n    greet()\n    println(square(4))\n}\n\nfun greet() {\n    println(\"hello\")\n}\n\nfun square(x: Int): Int = x * x\n"
---
# symbols
  [0] Builtin println @builtin
  [1] Builtin print @builtin
  [2] Builtin run @builtin
  [3] Builtin with @builtin
  [4] Builtin check @builtin
  [5] Builtin require @builtin
  [6] Builtin repeat @builtin
  [7] Builtin contract @builtin
  [8] Builtin synchronized @builtin
  [9] Builtin thread @builtin
  [10] Builtin Thread @builtin
  [11] Builtin buildList @builtin
  [12] Builtin buildMap @builtin
  [13] Builtin buildSet @builtin
  [14] Builtin sequence @builtin
  [15] Builtin iterator @builtin
  [16] TopLevelFunction main @4..8
  [17] TopLevelFunction greet @55..60
  [18] TopLevelFunction square @93..99
  [19] Parameter x @100..101

# uses
  @17..22 -> [17] greet (TopLevelFunction)
  @29..36 -> [0] println (Builtin)
  @37..43 -> [18] square (TopLevelFunction)
  @69..76 -> [0] println (Builtin)
  @115..116 -> [19] x (Parameter)
  @119..120 -> [19] x (Parameter)
