crates/klio-resolver/tests/snapshots/corpus__import_own_package.snap
---
source: crates/klio-resolver/tests/corpus.rs
expression: "package my.app\n\nimport my.app.Foo\n\nfun main() {\n    println(\"hi\")\n}\n"
---
# symbols
  [0] Builtin println @builtin
  [1] Builtin print @builtin
  [2] Builtin run @builtin
  [3] Builtin with @builtin
  [4] Builtin check @builtin
  [5] Builtin require @builtin
  [6] Builtin repeat @builtin
  [7] Builtin buildList @builtin
  [8] Builtin buildMap @builtin
  [9] Builtin buildSet @builtin
  [10] Builtin sequence @builtin
  [11] Builtin iterator @builtin
  [12] TopLevelFunction main @39..43

# uses
  @52..59 -> [0] println (Builtin)
