crates/klio-resolver/tests/snapshots/corpus__import_star_kotlin_text.snap
---
source: crates/klio-resolver/tests/corpus.rs
expression: "import kotlin.text.*\n\nfun main() {\n    println(\"hi\")\n}\n"
---
# symbols
  [0] Builtin println @builtin
  [1] Builtin print @builtin
  [2] Builtin run @builtin
  [3] Builtin with @builtin
  [4] Builtin check @builtin
  [5] Builtin require @builtin
  [6] Builtin repeat @builtin
  [7] Builtin contract @builtin
  [8] Builtin buildList @builtin
  [9] Builtin buildMap @builtin
  [10] Builtin buildSet @builtin
  [11] Builtin sequence @builtin
  [12] Builtin iterator @builtin
  [13] TopLevelFunction main @26..30

# uses
  @39..46 -> [0] println (Builtin)
