crates/klio-resolver/tests/snapshots/corpus__shadowing.snap
---
source: crates/klio-resolver/tests/corpus.rs
expression: "fun main() {\n    val x = 1\n    val x = 2\n    println(x)\n}\n"
---
# symbols
  [0] Builtin println @builtin
  [1] Builtin print @builtin
  [2] Builtin run @builtin
  [3] Builtin with @builtin
  [4] Builtin check @builtin
  [5] Builtin require @builtin
  [6] Builtin repeat @builtin
  [7] Builtin buildList @builtin
  [8] Builtin buildMap @builtin
  [9] Builtin buildSet @builtin
  [10] Builtin sequence @builtin
  [11] Builtin iterator @builtin
  [12] TopLevelFunction main @4..8
  [13] LocalProperty x @21..22
  [14] LocalProperty x @35..36

# uses
  @45..52 -> [0] println (Builtin)
  @53..54 -> [14] x (LocalProperty)

# diagnostics
  [R0002] Warning `x` shadows an earlier binding @35..36
